Bone roll resets if bones are moved in edit mode #39874

Closed
opened 2014-04-24 12:17:58 +02:00 by Nahuel Belich · 10 comments

System Information
Window 7 x64

Blender Version
Broken: Hash 0f91d2c hash 8cee587 ,
Worked: Hash e659cfd

Short description of error
Wile editing bones, every time a bone its rotated or moved the bone roll will reset to 0 or clamp to 180

Exact steps for others to reproduce the error
1- open blend file
2-select the armature, switch to edit mode
3-try to move a bone, watch the roll value

bone_roll.blend

**System Information** Window 7 x64 **Blender Version** Broken: Hash 0f91d2c hash 8cee587 , Worked: Hash e659cfd **Short description of error** Wile editing bones, every time a bone its rotated or moved the bone roll will reset to 0 or clamp to 180 **Exact steps for others to reproduce the error** 1- open blend file 2-select the armature, switch to edit mode 3-try to move a bone, watch the roll value [bone_roll.blend](https://archive.blender.org/developer/F85793/bone_roll.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich

Added subscriber: @mont29

Added subscriber: @mont29

Grrr… Confirmed (and since about a week at most, it seems...) :/

Grrr… Confirmed (and since about a week at most, it seems...) :/
Bastien Montagne self-assigned this 2014-04-24 14:07:23 +02:00

This issue was referenced by blender/blender-addons-contrib@16443b1ae0

This issue was referenced by blender/blender-addons-contrib@16443b1ae0f79e853ce13f17a3513a12c5cd8883

This issue was referenced by 16443b1ae0

This issue was referenced by 16443b1ae0f79e853ce13f17a3513a12c5cd8883

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 16443b1ae0.

Closed by commit 16443b1ae0.

Added subscriber: @sindra1961

Added subscriber: @sindra1961

This fix do you work correctly now?
Similar phenomenon has been recurrence.
Please look here.

https://developer.blender.org/T40271

This fix do you work correctly now? Similar phenomenon has been recurrence. Please look here. https://developer.blender.org/T40271
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39874
No description provided.