Fix T39874: Bone roll resets if bones are moved in edit mode

Own stupid typo in rBee387c6addb2, sigh...